fix(ui): force `slides` list item alignment to `start` (closes #302)

--- a/quarkdown-html/src/main/resources/render/theme/components/_alignment.scss
+++ b/quarkdown-html/src/main/resources/render/theme/components/_alignment.scss
@@ -2,10 +2,14 @@
   text-align: var(--qd-horizontal-alignment-global);
 
   // Local alignment (e.g. justification) is applied to specific elements instead of the whole document (#123).
-  p:not(.page-margin-content p, .mermaid p),
-  li:not(nav li) {
+  p:not(.page-margin-content p, .mermaid p) {
     text-align: var(--qd-horizontal-alignment-local);
-    text-align-last: var(--qd-horizontal-alignment-global, start);
+    text-align-last: var(--qd-horizontal-alignment-global);
+  }
+
+  li:not(nav li) {
+    text-align: var(--qd-horizontal-alignment-list-items, var(--qd-horizontal-alignment-local));
+    text-align-last: start;
   }
 
   caption, figcaption {
@@ -20,8 +24,15 @@
   }
 }
 
+.quarkdown-plain, .quarkdown-paged {
+  --qd-horizontal-alignment-global: start;
+  --qd-horizontal-alignment-local: justify;
+}
+
 .quarkdown-slides {
   --qd-horizontal-alignment-global: center;
+  --qd-horizontal-alignment-local: center;
+  --qd-horizontal-alignment-list-items: start;
 
   .reveal .slides > :is(section, .pdf-page) {
     text-align: var(--qd-horizontal-alignment-global);
@@ -31,8 +42,4 @@
     --qd-horizontal-alignment-global: start;
     --qd-horizontal-alignment-local: start;
   }
-}
-
-.quarkdown-plain, .quarkdown-paged {
-  --qd-horizontal-alignment-local: justify;
 }
